<resources>
    <string name="app_name">iBooks</string>
    <string name="already_arrived_first_page">Already arrived first page!</string>
    <string name="already_arrived_last_page">Already arrived last page!</string>
    <string name="toc_label">TOC</string>
    <string name="bookmark_label">Bookmark</string>
    <string name="paginating">Pagintating...</string>
    <string name="fail_to_open_book">Fail to open book</string>
    <string name="loading_video">Loading video</string>
    <string name="views">Views</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="import_files">Import</string>
    <string name="title">Title</string>
    <string name="by_title">By title</string>
    <string name="author">Author</string>
    <string name="by_author">By author</string>
    <string name="by_series">By series</string>
    <string name="by_rating">By rating</string>
    <string name="authors">Authors</string>
    <string name="by_creation_date">By creation date</string>
    <string name="by_addition_date">By addition date</string>
    <string name="last_access_date">By last access date</string>
    <string name="explorer_import">Import</string>
    <string name="imported">Imported</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="bytes">bytes</string>
    <string name="kilooctet">KB</string>
    <string name="megaoctet">MB</string>
    <string name="gigaoctet">GB</string>
    <string name="notAvailable">N/A</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="valider">Submit</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="error">Error</string>
    <string name="details">Details</string>
    <string name="list">List</string>
    <string name="medium_thumbnail">Medium Thumbnail</string>
    <string name="big_thumbnail">Big Thumbnail</string>
    <string name="small_thumbnail">Small Thumbnail</string>
    <string name="shelf">Book Shelf</string>
    <string name="press_to_exit">Press back once more to exit</string>
    <string name="license_agreement">End User License Agreement</string>
    <string name="adding_book">Importing book…</string>
    <string name="adding_books">Importing %s books…</string>
    <string name="deleting_books">Deleting %s books…</string>
    <string name="deleting_book">Deleting book</string>
    <string name="synchro_popup_title">%s new file(s) found</string>
    <string name="addition_date_label">Added: %1$s</string>
    <string name="open_toc_title">TOC</string>
    <string name="font_settings_title">Font settings</string>
    <string name="left_align_title">Align left</string>
    <string name="justify_align_title">Justify</string>
    <string name="right_align_title">Align right</string>
    <string name="themes">Theme</string>
    <string name="themes_settings">Theme settings</string>
    <string name="night_mode">Night mode</string>
    <string name="display_settings">Display</string>
    <string name="popup_display_title">Display settings</string>
    <string name="loading">loading…</string>
    <string name="close">Close</string>
    <string name="not_found">Not found</string>
    <string name="searching">Searching</string>
    <string name="items">%sitem(s)</string>
    <string name="brightness_settings">Brightness settings</string>
    <string name="brightness">Brightness</string>
    <string name="library_noitems_message">"You have no books.Touch the \"import\" button to import books from your device."</string>
    <string name="library_noresult_message">No books for the given criterias</string>
    <string name="about">About</string>
    <string name="about_product">Product name</string>
    <string name="about_version">Version</string>
    <string name="about_publisher">Publisher</string>
    <string name="about_qq_number">QQ</string>
    <string name="tips">Tips</string>
    <string name="version_new">A new version(%s) of the application is available. Do you wish to update now ?</string>
    <string name="version_info">Upgrade changes:</string>
    <string name="version_update">Update</string>
    <string name="version_cancel">Cancel</string>
    <string name="application_check_updata">check update</string>
    <string name="request_software_update">Requesting new version.</string>
    <string name="last_version">Current software is the last version!</string>
    <string name="open_book_error">Opening book failed!</string>
    <string name="popup_toc_title">Table of contents</string>
    <string name="page_number">Page number</string>
    <string name="import_popup_nothing_to_do">No files to import</string>
    <string name="pref_ui_category">User interface</string>
    <string name="pref_rotation_title">Rotation mode</string>
    <string name="pref_rotation_summary">How to change rotation</string>
    <string name="pref_fullscreen_title">Full screen</string>
    <string name="pref_fullscreen_summary">Hide status bar.</string>
    <string name="pref_title_title">Show Title</string>
    <string name="pref_title_summary">Show Title. Need Document reopen!!</string>
    <string name="pref_tap_title">Touch scroll</string>
    <string name="pref_tap_summary">Scroll by touch</string>
    <string name="pref_tapsize_title">Tap size</string>
    <string name="pref_tapsize_summary">Tap zone size in percents</string>
    <string name="pref_scroll_title">Scroll height</string>
    <string name="pref_scroll_summary">Set height for scroll</string>
    <string name="pref_render_category">Rendering</string>
    <string name="pref_browser_category">File Browser</string>
    <string name="pref_brautoscandir_title">Auto Scan directory</string>
    <string name="pref_brautoscandir_summary">Directory for automatic files search</string>
    <string name="pref_brbrfiletypesscreen_title">Files Types</string>
    <string name="pref_brbrfiletypesscreen_summary">Files Types for Show in library</string>
    <string name="pref_brfiletypedjvu_title">.djvu</string>
    <string name="pref_brfiletypedjvu_summary">Show DjVu files</string>
    <string name="pref_brfiletypedjv_title">.djv</string>
    <string name="pref_brfiletypedjv_summary">Show DjVu files</string>
    <string name="pref_brfiletypepdf_title">.pdf</string>
    <string name="pref_brfiletypepdf_summary">Show PDF files</string>
    <string name="pref_brfiletypexps_title">.xps</string>
    <string name="pref_brfiletypexps_summary">Show XPS files</string>
    <string name="pref_brfiletypeoxps_title">.oxps</string>
    <string name="pref_brfiletypeoxps_summary">Show OXPS files</string>
    <string name="pref_brfiletypecbz_title">.cbz</string>
    <string name="pref_brfiletypecbz_summary">Show CBZ files</string>
    <string name="pref_brfiletypecbr_title">.cbr</string>
    <string name="pref_brfiletypecbr_summary">Show CBR files</string>
    <string name="pref_brfiletypefb2_title">.fb2</string>
    <string name="pref_brfiletypefb2_summary">Show FB2 files</string>
    <string name="pref_brfiletypefb2.zip_title">.fb2.zip</string>
    <string name="pref_brfiletypefb2.zip_summary">Show FB2.ZIP files</string>
    <string name="pref_brfiletypespecific_title">Format specific</string>
    <string name="pref_brfiletypespecific_summary">Settings for each individual file format</string>
    <string name="pref_brfiletypespecificdjvu_title">DJVU</string>
    <string name="pref_brfiletypespecificdjvu_summary">DJVU format specific settings</string>
    <string name="pref_djvu_rendering_mode_title">Rendering mode</string>
    <string name="pref_djvu_rendering_mode_summary">Page rendering mode</string>
    <string name="list_djvu_rendering_mode_0">Color</string>
    <string name="list_djvu_rendering_mode_1">Black</string>
    <string name="list_djvu_rendering_mode_2">Color only</string>
    <string name="list_djvu_rendering_mode_3">Mask only</string>
    <string name="list_djvu_rendering_mode_4">Background only</string>
    <string name="list_djvu_rendering_mode_5">Foreground only</string>
    <string name="list_rotation_unspecified">Unspecified</string>
    <string name="list_rotation_land">Force landscape</string>
    <string name="list_rotation_port">Force portrait</string>
    <string name="list_rotation_user">User</string>
    <string name="list_rotation_behind">Behind</string>
    <string name="list_rotation_auto">Automatic</string>
    <string name="list_rotation_nosensor">No sensor</string>
    <string name="list_rotation_sensor_landscape">Sensor landscape</string>
    <string name="list_rotation_sensor_portrait">Sensor portrait</string>
    <string name="list_rotation_reverse_landscape">Reverse landscape</string>
    <string name="list_rotation_reverse_portrait">Reverse portrait</string>
    <string name="list_rotation_full_sensor">Full sensor</string>
    <string name="menu_close">Close</string>
    <string name="menu_goto_page">Go to page</string>
    <string name="menu_outline">Outline</string>
    <string name="menu_zoom">Zoom</string>
    <string name="menu_nightmode">Day/Night</string>
    <string name="menu_settings">All Settings</string>
    <string name="menu_booksettings">Book Settings</string>
    <string name="menu_cleanrecent">Clear Data</string>
    <string name="menu_add_bookmark">Add bookmark</string>
    <string name="menu_thumbnail">Set as thumbnail</string>
    <string name="menu_about">About</string>
    <string name="dialog_title_goto_page">Go to page</string>
    <string name="button_goto_page">Go to page</string>
    <string name="text_page">Page</string>
    <string name="list_align_by_width">By width</string>
    <string name="list_align_by_height">By height</string>
    <string name="list_align_auto">Automatic</string>
    <string name="pref_align_title">Page align mode</string>
    <string name="pref_align_summary">How to align pages</string>
    <string name="pref_viewmode_title">Page view mode</string>
    <string name="pref_viewmode_summary">Page view mode</string>
    <string name="pref_pagesinmemory_title">Pages in memory</string>
    <string name="pref_pagesinmemory_summary">Number of pages to store in memory</string>
    <string name="pref_splitpages_title">Split pages</string>
    <string name="pref_splitpages_summary">Split landscape pages into two portrait</string>
    <string name="pref_useanimation_title">Use animation</string>
    <string name="pref_useanimation_summary">Use animation for page flipping</string>
    <string name="pref_nightmode_title">Night mode</string>
    <string name="pref_nightmode_summary">Use white symbols on black background</string>
    <string name="error_close">Close</string>
    <string name="password_text">Enter password</string>
    <string name="password_ok">OK</string>
    <string name="password_cancel">Cancel</string>
    <string name="pref_ui_category_summary">User interface settings</string>
    <string name="pref_pageintitle_title">Page in title</string>
    <string name="pref_pageintitle_summary">Show page number in title bar</string>
    <string name="pref_render_category_summary">Rendering settings</string>
    <string name="pref_browser_category_summary">File browser and file types settings</string>
    <string name="pref_book_category">Book settings</string>
    <string name="pref_book_category_summary">Current book settings</string>
    <string name="pref_animationtype_title">Animation type</string>
    <string name="pref_animationtype_summary">Select type of transition animation</string>
    <string name="list_animation_none">None</string>
    <string name="exit">Exit</string>
    <string name="send">Send</string>
</resources>