<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/read_bg_5" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/toolbar"
        android:orientation="vertical" >

        <include layout="@layout/header_filtered_view" />

        <include layout="@layout/search_simple" />

        <TextView
            android:id="@id/items"
            style="@style/ItemSubtitle"
            android:layout_marginRight="10dip"
            android:gravity="right"
            android:singleLine="true" />

        <LinearLayout
            android:id="@id/content_container"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/operation_panel"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/toolbar_background"
        android:gravity="center"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <Button
            android:id="@id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_button_selector"
            android:drawableTop="@drawable/toolbar_delete"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="12.0dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbarHeight"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/toolbar_background"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:paddingTop="5dip" >

        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@id/view_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_button_selector"
                    android:drawableTop="@drawable/toolbar_view"
                    android:onClick="onClick"
                    android:text="@string/views"
                    android:textColor="@android:color/white"
                    android:textSize="12.0dip" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" />

                <Button
                    android:id="@id/search_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_button_selector"
                    android:drawableTop="@drawable/toolbar_search"
                    android:onClick="onClick"
                    android:text="@string/search"
                    android:textColor="@android:color/white"
                    android:textSize="12.0dip" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" />

                <Button
                    android:id="@id/library_synchronize_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_button_selector"
                    android:drawableTop="@drawable/toolbar_synchronize"
                    android:onClick="onClick"
                    android:text="@string/import_files"
                    android:textColor="@android:color/white"
                    android:textSize="12.0dip" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" />

                <Button
                    android:id="@id/settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_button_selector"
                    android:drawableTop="@drawable/toolbar_settings"
                    android:onClick="onClick"
                    android:text="@string/settings"
                    android:textColor="@android:color/white"
                    android:textSize="12.0dip" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <ImageSwitcher
        android:id="@id/info_image_switcher"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="invisible" />
    
    <LinearLayout
        android:id="@id/splash_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/splash_bg"
        android:orientation="vertical" />
</RelativeLayout>